--- a/css/web_base.css
+++ b/css/web_base.css
@@ -1,96 +1,142 @@
-
-body 
-{
-	margin: 10px !important;
-	padding: 10px !important;
+body {
+   margin-right: 10px !important;
+   padding-right: 10px !important;
 }
-/* ----------- */
-/* User Styles */
-/* ----------- */
+   /* ----------- */
+   /* User Styles */
+   /* ----------- */
 
-/* Footer Styles */
-footer #bottomSpan
-{
-	position: absolute;
-	bottom: 0px;
-	left: 10px;
+   /* Footer Styles */
+footer #bottomSpan {
+   position: absolute;
+   bottom: 0px;
+   left: 10px;
 }
 
-/* Space between header and buttons */
-.jumbotron h2
-{
-	margin-top:-20px;
+   /* Space between header and buttons */
+.jumbotron h2 {
+   margin-top:-20px;
 }
 
-.row
-{
-	margin-left:-50px;
+.row {
+   margin-left:-50px;
 }
 
-.toolbar ul li
-{
-	margin: 5px 0 0 0;
-	text-align: left;
+.toolbar ul li  {
+   margin: 5px 0 0 0;
+   text-align: left;
 }
 
-.toolbar-btn
-{
-	width: 150px;
+.toolbar-btn {
+   width: 150px;
 }
-.btn-group
-{
-	width: 150px !important;
+.btn-group {
+   width: 150px !important;
 }
-.toolbar-dropdown
-{
-	position:relative;
-	width: 100%;
-	padding-left: 0px;
-	padding-right: 0px;
+.toolbar-dropdown  {
+   position:relative;
+   width: 100%;
+   padding-left: 0px;
+   padding-right: 0px;
 }
-.toolbar-dropdown .caret
-{
-	position: absolute; right: 8px;
-	top: 5px;
+.toolbar-dropdown .caret {
+   position: absolute; right: 8px;
+   top: 5px;
+}
+#external-events {
+   width: 260px;
+   padding: 0 10px;
+   border: 1px solid #ccc;
+   background: #eee;
+   text-align: left;
+   display: none;
+   margin: 10px;
+}
+#external-events h4 {
+   font-size: 16px;
+   margin-top: 0;
+   padding-top: 1em;
 }
 
-.disabled
-{
-	background: #949494;
-	color: black;
-	text-decoration: line-through;
+.external-event {
+   /* try to mimick the look of a real event */
+   margin: 10px 0px;
+   padding: 2px 4px;
+   color: #fff;
+   font-size: .85em;
+   cursor: pointer;
+   width: 250px;
 }
-.disabled:hover
-{
-	background: #949494 !important;
-	color: black !important;
-	text-decoration: line-through !important;
+#colorCode {
+   width: 260px;
+   padding: 0 10px;
+   border: 1px solid #ccc;
+   background: #eee;
+   text-align: left;
+   margin: 10px;
+   display: none;
 }
-#copy_brand
-{
-	color: #000;
-	font-weight: bold;
-	font-size:10pt;
-	position: fixed; right: 5px;
+#colorCode h4 {
+   font-size: 16px;
+   margin-top: 0;
+   padding-top: 1em;
+}
+#copy_brand  {
+   color: #000;
+   font-weight: bold;
+   font-size:10pt;
+   position: fixed; right: 5px;
    text-shadow: 0px 0px 5px rgba(255, 255, 255, 0.4);
 
-	-webkit-transition: all .3s linear;  
-	-moz-transition:    all .3s linear;  
-	-o-transition: 	  all .3s linear;  
-	-ms-transition: 	  all .3s linear;  
-	transition: 	     all .3s linear;
+   -webkit-transition: all .3s linear;  
+   -moz-transition:    all .3s linear;  
+   -o-transition: 	  all .3s linear;  
+   -ms-transition: 	  all .3s linear;  
+   transition: 	     all .3s linear;
 }
 
-#copy_brand:hover
-{
-	color:#FAFAFA;
+#copy_brand:hover  {
+   color:#FAFAFA;
 }
 #employeeLoginForm .form-inline {
-	width: 50%;
+   width: 50%;
 }
-@media only screen and (max-width: 529px) {
-	#employeeLoginForm .form-inline {
-		width: 100%;
-		margin-left: 20px;
-	}
+.leftNav  {
+   position: fixed;
+   height: 100%;
+   left: 0px top: 0px;
+   margin: 0px;
+   padding: 0 0 0 5px;
+   background: #DDD;
+   width: 300px;
+   overflow: scroll;
+}
+   /* ---------------- */
+   /* Newsfeed */
+   /* ---------------- */
+#newsfeed ul {
+   list-style-type: none;
+   margin-left: 0px;
+   padding-left: 0px;
+   padding-right: 10px;
+}
+#newsfeed li {
+   padding-left: 10px;
+   margin: 5px 0 5px 0;
+   text-align: left;
+}
+#newsfeed li textarea {
+   float: left;
+}
+#newsfeed li button {
+   float: left;
+}
+#newsfeed li div {
+   text-align: left;
+}
+@media only screen and (max-width: 767px)  {
+   #employeeLoginForm .form-inline {
+      width: 90%;
+      margin-left: 40px;
+   }
 }
