--- a/css/web_base.css
+++ b/css/web_base.css
@@ -109,7 +109,8 @@ footer #bottomSpan {
    padding: 0 0 0 5px;
    background: #DDD;
    width: 300px;
-   overflow: scroll;
+   overflow-y: scroll;
+   overflow-x: hidden;
 }
    /* ---------------- */
    /* Newsfeed */
