--- a/js/availabilityCalPrint.css
+++ b/js/availabilityCalPrint.css
@@ -6,7 +6,9 @@ body {
     font-size: 14px;
     font-family: "Lucida Grande", Helvetica, Arial, Verdana, sans-serif;
 }
-
+.hiddenPrint {
+    display:none;
+}
 #wrap {
     width: 670px;
     margin: 0 auto;
@@ -57,4 +59,7 @@ body {
 }
 #span {
     display:none;
+}
+.leftNav {
+    display: none;
 }
