--- a/application/views/admin/adminCSS.html
+++ b/application/views/admin/adminCSS.html
@@ -1,6 +1,5 @@
 <html>
 	<style type='text/css'>
-<<<<<<< HEAD
 	    #calendar {
 	    	height: 90%;
 	        margin: 10px;
@@ -11,7 +10,6 @@
 	        overflow-x: hidden;
 	        overflow-y: scroll;
 	    }
-=======
 		#calendar {
 			position: absolute;
 			right: 10px;
@@ -20,7 +18,6 @@
 			white-space: nowrap;
 			z-index: -1;
 		}
->>>>>>> 8c8203b1c97c118b81bb63531dac5a3ead007367
 		#deleteConfirmation, #finalizeConfirmation, #hiddenRadio, #customTimes, #weekInformation {
 			display: none;
 		}
@@ -40,7 +37,6 @@
 		#employees {
 			display: block;
 		}
-<<<<<<< HEAD
 		.leftMenu div {
 			margin: 5px;
 			width: 150px;
@@ -50,8 +46,7 @@
 			width: 80%;
 			text-align: left;
 		}
-		.leftMenu div input {
-=======
+		/*.leftMenu div input */
 		#employees .btn-group {
 			margin: 5px;
 		}
@@ -60,16 +55,12 @@
 			text-align: left;
 		}
 		#employees .btn-group input {
->>>>>>> 8c8203b1c97c118b81bb63531dac5a3ead007367
 			position: absolute;
 			right: -10px;
 			top: 6px;
 		}
-<<<<<<< HEAD
-		.leftMenu div .dropdown-menu input {
-=======
+		.leftMenu div .dropdown-menu input { }
 		#employees .btn-group .dropdown-menu input {
->>>>>>> 8c8203b1c97c118b81bb63531dac5a3ead007367
 			position: relative;
 			top: 0px;
 		}
