--- a/application/views/admin/adminCSS.html
+++ b/application/views/admin/adminCSS.html
@@ -46,7 +46,11 @@
 			width: 80%;
 			text-align: left;
 		}
-		/*.leftMenu div input */
+		.leftMenu div input {
+			position: absolute;
+			right: -10px;
+			top: 6px;
+		}
 		#employees .btn-group {
 			margin: 5px;
 		}
@@ -59,7 +63,10 @@
 			right: -10px;
 			top: 6px;
 		}
-		.leftMenu div .dropdown-menu input { }
+		.leftMenu div .dropdown-menu input {
+			position: relative;
+			top: 0px;
+		}
 		#employees .btn-group .dropdown-menu input {
 			position: relative;
 			top: 0px;
