--- a/js/plugins/bootstrap/css/bootstrap.css
+++ b/js/plugins/bootstrap/css/bootstrap.css
@@ -351,10 +351,10 @@ img {
 }
 
 hr {
-  margin-top: 20px;
-  margin-bottom: 20px;
+  margin-top: 10px;
+  margin-bottom: 10px;
   border: 0;
-  border-top: 1px solid #eeeeee;
+  border-top: 1px solid #ddd;
 }
 
 p {
@@ -3588,6 +3588,7 @@ button.close {
   max-height: 400px;
   padding: 15px;
   overflow-y: auto;
+  overflow-x: hidden;
 }
 
 .modal-form {
