--- a/css/web_base.css
+++ b/css/web_base.css
@@ -1,8 +1,22 @@
 body {
-   margin-right: 10px !important;
-   padding-right: 10px !important;
-   overflow: hidden;
+   margin-top: 0px;
+   margin-left: 0px;
+   margin-right: 0px;
+   text-align: center;
+   font-size: 14px;
    overflow:hidden;
+   height: 100%;
+   width: 100%;
+}
+ #calendar {
+   position: absolute;
+   right: 5px;
+   top: 10%;
+   margin: 10px;
+   padding-bottom: 20px;
+   height: 87%;
+   overflow-x: hidden;
+   overflow-y: scroll;
 }
    /* ----------- */
    /* User Styles */
@@ -156,26 +170,61 @@ footer #bottomSpan {
 #employeeLoginForm .form-inline {
    width: 50%;
 }
+.slide {
+   position: relative;
+}
+.leftNavOuter {
+   position: absolute;
+   left: -310px;
+   top: 0px;
+}
+.leftNavOuter #menu-toggle-outer {
+   position: absolute;
+   top: 25px;
+   right: -60px;
+}
+.leftNavOuter .leftNav #menu-toggle-inner {
+   position: absolute;
+   top: 5px;
+}
+.leftNavOuter .menu-toggle {
+   display: block;
+   width: 48px;
+   height: 32px;
+   padding: 8px 12px;
+   background-color: transparent;
+   border: 1px solid #dddddd;
+   border-radius: 4px;
+}
+.menu-toggle:hover,
+.menu-toggle:focus {
+  background-color: #dddddd;
+}
+
+.menu-toggle .icon-bar {
+  display: block;
+  width: 22px;
+  height: 2px;
+  background-color: #cccccc;
+  border-radius: 1px;
+}
+
+.menu-toggle .icon-bar + .icon-bar {
+  margin-top: 4px;
+}
+
 .leftNav  {
-   position: fixed;
    height: 100%;
-   left: 0px top: 0px;
-   margin: 0px;
-   padding: 0 0 0 5px;
-   background: #DDD;
-   width: 300px;
+   width: 310px;
+   background: #EEE;
    overflow-y: scroll;
-   overflow-x: hidden;
+   overflow-x: none;
 }
 /* -------- */
 /* Loading  */
 /* -------- */
 .overlay {
    display:none;
-   background-color: white;
-   filter:alpha(opacity=50); /* IE */
-   opacity: 0.5; /* Safari, Opera */
-   -moz-opacity:0.50; /* FireFox */
    z-index: 2000;
    height: 100%;
    width: 100%;
@@ -187,11 +236,16 @@ footer #bottomSpan {
 }
 .overlay-container {
    display:none;
+   background: #CCC;
    z-index: 2001;
    width: 25%;
    position: fixed;
    left: 40%;
    top: 30%;
+   padding: 10px;
+   -webkit-border-radius: 4px;
+   -moz-border-radius: 4px;
+   border-radius: 4px;
 }
 .progress-bar {
    z-index: 3000;
@@ -214,7 +268,7 @@ footer #bottomSpan {
 /* ---------------- */
 #newsfeed ul {
    list-style-type: none;
-   margin-left: 0px;
+   margin-left: 5px;
    padding-left: 0px;
    padding-right: 10px;
 }
@@ -222,6 +276,11 @@ footer #bottomSpan {
    #employeeLoginForm .form-inline {
       width: 90%;
       margin-left: 40px;
+   }
+}
+@media only screen and (max-width: 767px)  {
+   .nav-collapse ul.nav li {
+      background : #EEE;
    }
 }
 /*------------ */
@@ -236,3 +295,4 @@ footer #bottomSpan {
    margin: 0px 5px 5px 10px;
    padding-bottom: 5px;
 }
+
