--- a/css/web_base.css
+++ b/css/web_base.css
@@ -277,11 +277,32 @@ footer #bottomSpan {
       width: 90%;
       margin-left: 40px;
    }
-}
-@media only screen and (max-width: 767px)  {
-   .nav-collapse ul.nav li {
-      background : #EEE;
+   #navbar div.container {
+      position: absolute; left: 0px !important;
    }
+   .nav-collapse ul.nav li {
+      background : #333333;
+   }
+   .nav-collapse ul.nav li a.disabled {
+      display:none;
+   }
+   .nav-collapse ul.nav li.dropdown ul.dropdown-menu li {
+      background : #ffffff;
+   }
+   .calendar-button {
+      width: 60%;
+   }
+   #copy_brand {
+      display: none;
+   }
+}
+@media only screen and (max-width: 400px)  {
+   .calendar-button {
+      width: 100%;
+   }
+}
+.calendar-button {
+   margin: 10px 0 10px 20px;
 }
 /*------------ */
 /* Form Styles */
@@ -294,5 +315,25 @@ footer #bottomSpan {
    border-radius: 4px;
    margin: 0px 5px 5px 10px;
    padding-bottom: 5px;
+}
+.form-group .radio-label {
+   text-align: center !important;
+   /*border: 1px solid black;*/
+   -webkit-border-radius: 4px;
+   -moz-border-radius: 4px;
+   border-radius: 4px;
+   margin: 0px 5px 5px 10px;
+   padding-bottom: 5px;
+   color: #FFF;
+}
+.label-busy {
+   background: #000000 !important;
+}
+.label-custom {
+   background: #3366CC;
+}
+.form-group input.radio {
+   height: 10px;
+   width: 10px;
 }
 
