--- a/css/web_base.css
+++ b/css/web_base.css
@@ -9,7 +9,7 @@ body {
 }
  #calendar {
    position: absolute;
-   right: 5px;
+   right: 10px;
    top: 80px;
    margin: 10px 0 10px 0;
    padding-bottom: 20px;
@@ -170,7 +170,7 @@ footer #bottomSpan {
 }
 .slide {
    position: relative;
-   z-index: 1030;
+   z-index: 400;
 }
 .leftNavOuter {
    position: absolute;
@@ -272,6 +272,9 @@ footer #bottomSpan {
    padding-left: 0px;
    padding-right: 10px;
 }
+.calendar-button {
+   min-width: 200px;
+}
 
 @media only screen and (max-width: 770px)  {
    #employeeLoginForm .form-inline {
@@ -302,7 +305,7 @@ footer #bottomSpan {
       width: 100%;
    }
    .fc-header-center h2 {
-      font-size: 18pt;
+      font-size: 16pt;
    }
    .fc-day-header {
       font-size: 14px;
@@ -344,4 +347,12 @@ footer #bottomSpan {
    height: 10px;
    width: 10px;
 }
-
+/* ------------ */
+/* Settings */
+/* ------------ */
+div.table-container {
+   height: 500px;
+   margin: 10px;
+   padding: 10px;
+   overflow: scroll;
+}
