Adding functionality to settings

--- a/css/web_base.css
+++ b/css/web_base.css
@@ -216,9 +216,11 @@ footer #bottomSpan {
    height: 100%;
    width: 310px;
    background: #EEE;
+   overflow: hidden;
 }
 .leftMenu {
    overflow-y: scroll;
+   height: 90%;
 }
 /* -------- */
 /* Loading  */
